--- a/src/simulatordialog.ui
+++ b/src/simulatordialog.ui
@@ -106,7 +106,22 @@
          <item>
           <widget class="QPushButton" name="switchTHR">
            <property name="autoFillBackground">
-            <bool>true</bool>
+            <bool>false</bool>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">QPushButton {
+     background-color: #EEEEEE;
+     border-style: outset;
+     border-width: 1px;
+     border-radius: 4px;
+     border-color: black;
+     padding: 2px;
+ } 
+
+QPushButton:checked {
+     background-color: #4CC417;
+     border-style: inset;
+ }</string>
            </property>
            <property name="text">
             <string>THR</string>
@@ -118,6 +133,21 @@
          </item>
          <item>
           <widget class="QPushButton" name="switchRUD">
+           <property name="styleSheet">
+            <string notr="true">QPushButton {
+     background-color: #EEEEEE;
+     border-style: outset;
+     border-width: 1px;
+     border-radius: 4px;
+     border-color: black;
+     padding: 2px;
+ } 
+
+QPushButton:checked {
+     background-color: #4CC417;
+     border-style: inset;
+ }</string>
+           </property>
            <property name="text">
             <string>RUD</string>
            </property>
@@ -128,6 +158,21 @@
          </item>
          <item>
           <widget class="QPushButton" name="switchELE">
+           <property name="styleSheet">
+            <string notr="true">QPushButton {
+     background-color: #EEEEEE;
+     border-style: outset;
+     border-width: 1px;
+     border-radius: 4px;
+     border-color: black;
+     padding: 2px;
+ } 
+
+QPushButton:checked {
+     background-color: #4CC417;
+     border-style: inset;
+ }</string>
+           </property>
            <property name="text">
             <string>ELE</string>
            </property>
@@ -138,6 +183,21 @@
          </item>
          <item>
           <widget class="QPushButton" name="switchAIL">
+           <property name="styleSheet">
+            <string notr="true">QPushButton {
+     background-color: #EEEEEE;
+     border-style: outset;
+     border-width: 1px;
+     border-radius: 4px;
+     border-color: black;
+     padding: 2px;
+ } 
+
+QPushButton:checked {
+     background-color: #4CC417;
+     border-style: inset;
+ }</string>
+           </property>
            <property name="text">
             <string>AIL</string>
            </property>
@@ -152,6 +212,21 @@
         <layout class="QHBoxLayout" name="horizontalLayout_3">
          <item>
           <widget class="QPushButton" name="holdLeftX">
+           <property name="styleSheet">
+            <string notr="true">QPushButton {
+     background-color: #EEEEEE;
+     border-style: outset;
+     border-width: 1px;
+     border-radius: 4px;
+     border-color: black;
+     padding: 2px;
+ } 
+
+QPushButton:checked {
+     background-color: #4CC417;
+     border-style: inset;
+ }</string>
+           </property>
            <property name="text">
             <string>Hold X</string>
            </property>
@@ -161,7 +236,72 @@
           </widget>
          </item>
          <item>
+          <widget class="QPushButton" name="FixLeftX">
+           <property name="styleSheet">
+            <string notr="true">QPushButton {
+     background-color: #EEEEEE;
+     border-style: outset;
+     border-width: 1px;
+     border-radius: 4px;
+     border-color: black;
+     padding: 2px;
+ } 
+
+QPushButton:checked {
+     background-color: #4CC417;
+     border-style: inset;
+ }</string>
+           </property>
+           <property name="text">
+            <string>Fix X</string>
+           </property>
+           <property name="checkable">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="FixLeftY">
+           <property name="styleSheet">
+            <string notr="true">QPushButton {
+     background-color: #EEEEEE;
+     border-style: outset;
+     border-width: 1px;
+     border-radius: 4px;
+     border-color: black;
+     padding: 2px;
+ } 
+
+QPushButton:checked {
+     background-color: #4CC417;
+     border-style: inset;
+ }</string>
+           </property>
+           <property name="text">
+            <string>Fix Y</string>
+           </property>
+           <property name="checkable">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item>
           <widget class="QPushButton" name="holdLeftY">
+           <property name="styleSheet">
+            <string notr="true">QPushButton {
+     background-color: #EEEEEE;
+     border-style: outset;
+     border-width: 1px;
+     border-radius: 4px;
+     border-color: black;
+     padding: 2px;
+ } 
+
+QPushButton:checked {
+     background-color: #4CC417;
+     border-style: inset;
+ }</string>
+           </property>
            <property name="text">
             <string>Hold Y</string>
            </property>
@@ -216,6 +356,21 @@
         <layout class="QVBoxLayout" name="verticalLayout_2">
          <item>
           <widget class="QPushButton" name="switchTRN">
+           <property name="styleSheet">
+            <string notr="true">QPushButton {
+     background-color: #EEEEEE;
+     border-style: outset;
+     border-width: 1px;
+     border-radius: 4px;
+     border-color: black;
+     padding: 2px;
+ } 
+
+QPushButton:pressed {
+     background-color: #4CC417;
+     border-style: inset;
+ }</string>
+           </property>
            <property name="text">
             <string>TRN</string>
            </property>
@@ -223,6 +378,21 @@
          </item>
          <item>
           <widget class="QPushButton" name="switchGEA">
+           <property name="styleSheet">
+            <string notr="true">QPushButton {
+     background-color: #EEEEEE;
+     border-style: outset;
+     border-width: 1px;
+     border-radius: 4px;
+     border-color: black;
+     padding: 2px;
+ } 
+
+QPushButton:checked {
+     background-color: #4CC417;
+     border-style: inset;
+ }</string>
+           </property>
            <property name="text">
             <string>GEA</string>
            </property>
@@ -236,6 +406,21 @@
          </item>
          <item>
           <widget class="QPushButton" name="switchID0">
+           <property name="styleSheet">
+            <string notr="true">QPushButton {
+     background-color: #EEEEEE;
+     border-style: outset;
+     border-width: 1px;
+     border-radius: 4px;
+     border-color: black;
+     padding: 2px;
+ } 
+
+QPushButton:checked {
+     background-color: #4CC417;
+     border-style: inset;
+ }</string>
+           </property>
            <property name="text">
             <string>ID0</string>
            </property>
@@ -252,6 +437,21 @@
          </item>
          <item>
           <widget class="QPushButton" name="switchID1">
+           <property name="styleSheet">
+            <string notr="true">QPushButton {
+     background-color: #EEEEEE;
+     border-style: outset;
+     border-width: 1px;
+     border-radius: 4px;
+     border-color: black;
+     padding: 2px;
+ } 
+
+QPushButton:checked {
+     background-color: #4CC417;
+     border-style: inset;
+ }</string>
+           </property>
            <property name="text">
             <string>ID1</string>
            </property>
@@ -265,6 +465,21 @@
          </item>
          <item>
           <widget class="QPushButton" name="switchID2">
+           <property name="styleSheet">
+            <string notr="true">QPushButton {
+     background-color: #EEEEEE;
+     border-style: outset;
+     border-width: 1px;
+     border-radius: 4px;
+     border-color: black;
+     padding: 2px;
+ } 
+
+QPushButton:checked {
+     background-color: #4CC417;
+     border-style: inset;
+ }</string>
+           </property>
            <property name="text">
             <string>ID2</string>
            </property>
@@ -282,6 +497,21 @@
         <layout class="QHBoxLayout" name="horizontalLayout_4">
          <item>
           <widget class="QPushButton" name="holdRightX">
+           <property name="styleSheet">
+            <string notr="true">QPushButton {
+     background-color: #EEEEEE;
+     border-style: outset;
+     border-width: 1px;
+     border-radius: 4px;
+     border-color: black;
+     padding: 2px;
+ } 
+
+QPushButton:checked {
+     background-color: #4CC417;
+     border-style: inset;
+ }</string>
+           </property>
            <property name="text">
             <string>Hold X</string>
            </property>
@@ -291,7 +521,72 @@
           </widget>
          </item>
          <item>
+          <widget class="QPushButton" name="FixRightX">
+           <property name="styleSheet">
+            <string notr="true">QPushButton {
+     background-color: #EEEEEE;
+     border-style: outset;
+     border-width: 1px;
+     border-radius: 4px;
+     border-color: black;
+     padding: 2px;
+ } 
+
+QPushButton:checked {
+     background-color: #4CC417;
+     border-style: inset;
+ }</string>
+           </property>
+           <property name="text">
+            <string>Fix X</string>
+           </property>
+           <property name="checkable">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="FixRightY">
+           <property name="styleSheet">
+            <string notr="true">QPushButton {
+     background-color: #EEEEEE;
+     border-style: outset;
+     border-width: 1px;
+     border-radius: 4px;
+     border-color: black;
+     padding: 2px;
+ } 
+
+QPushButton:checked {
+     background-color: #4CC417;
+     border-style: inset;
+ }</string>
+           </property>
+           <property name="text">
+            <string>Fix Y</string>
+           </property>
+           <property name="checkable">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item>
           <widget class="QPushButton" name="holdRightY">
+           <property name="styleSheet">
+            <string notr="true">QPushButton {
+     background-color: #EEEEEE;
+     border-style: outset;
+     border-width: 1px;
+     border-radius: 4px;
+     border-color: black;
+     padding: 2px;
+ } 
+
+QPushButton:checked {
+     background-color: #4CC417;
+     border-style: inset;
+ }</string>
+           </property>
            <property name="text">
             <string>Hold Y</string>
            </property>
