--- a/trunk/src/generaledit.ui
+++ b/trunk/src/generaledit.ui
@@ -30,7 +30,7 @@
       <attribute name="title">
        <string>Setup</string>
       </attribute>
-      <layout class="QGridLayout" name="gridLayout_2" columnstretch="0,1">
+      <layout class="QFormLayout" name="formLayout">
        <item row="0" column="0">
         <widget class="QLabel" name="label">
          <property name="toolTip">
@@ -426,13 +426,30 @@
         </widget>
        </item>
        <item row="12" column="0">
+        <widget class="QLabel" name="label_27">
+         <property name="text">
+          <string>Silent mode (No Alarm)</string>
+         </property>
+        </widget>
+       </item>
+       <item row="12" column="1">
+        <widget class="QCheckBox" name="alarmwarnChkB">
+         <property name="text">
+          <string/>
+         </property>
+         <property name="checked">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="13" column="0">
         <widget class="QLabel" name="label_12">
          <property name="text">
           <string>Beeper Mode</string>
          </property>
         </widget>
        </item>
-       <item row="12" column="1">
+       <item row="13" column="1">
         <widget class="QComboBox" name="beeperCB">
          <item>
           <property name="text">
@@ -461,7 +478,7 @@
          </item>
         </widget>
        </item>
-       <item row="13" column="0">
+       <item row="14" column="0">
         <spacer name="horizontalSpacer">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
@@ -474,14 +491,14 @@
          </property>
         </spacer>
        </item>
-       <item row="14" column="0">
+       <item row="15" column="0">
         <widget class="QLabel" name="label_13">
          <property name="text">
           <string>Channel Order (For Templates)</string>
          </property>
         </widget>
        </item>
-       <item row="14" column="1">
+       <item row="15" column="1">
         <widget class="QComboBox" name="channelorderCB">
          <property name="currentIndex">
           <number>0</number>
@@ -608,14 +625,14 @@
          </item>
         </widget>
        </item>
-       <item row="15" column="0">
+       <item row="16" column="0">
         <widget class="QLabel" name="label_14">
          <property name="text">
           <string>Stick Mode</string>
          </property>
         </widget>
        </item>
-       <item row="15" column="1">
+       <item row="16" column="1">
         <widget class="QComboBox" name="stickmodeCB">
          <property name="currentIndex">
           <number>1</number>
