--- a/src/simulatordialog.ui
+++ b/src/simulatordialog.ui
@@ -22,11 +22,23 @@
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
       <widget class="QDial" name="dialP_1">
+       <property name="toolTip">
+        <string>P1</string>
+       </property>
        <property name="minimum">
         <number>-1024</number>
        </property>
        <property name="maximum">
         <number>1024</number>
+       </property>
+       <property name="pageStep">
+        <number>128</number>
+       </property>
+       <property name="notchTarget">
+        <double>64.000000000000000</double>
+       </property>
+       <property name="notchesVisible">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
@@ -41,18 +53,39 @@
        <property name="maximum">
         <number>1024</number>
        </property>
+       <property name="pageStep">
+        <number>128</number>
+       </property>
        <property name="invertedAppearance">
         <bool>false</bool>
+       </property>
+       <property name="notchTarget">
+        <double>64.000000000000000</double>
+       </property>
+       <property name="notchesVisible">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QDial" name="dialP_3">
+       <property name="toolTip">
+        <string>P3</string>
+       </property>
        <property name="minimum">
         <number>-1024</number>
        </property>
        <property name="maximum">
         <number>1024</number>
+       </property>
+       <property name="pageStep">
+        <number>128</number>
+       </property>
+       <property name="notchTarget">
+        <double>64.000000000000000</double>
+       </property>
+       <property name="notchesVisible">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
